--- a/sass/components/_hero.scss
+++ b/sass/components/_hero.scss
@@ -14,7 +14,7 @@
 }
 
 .hero-title {
-  color: #ffffff;
+  color: $thirdly-text-color;
   font-weight: 900;
   font-size: 44px;
   line-height: 1.36;
