--- a/sass/components/_logo.scss
+++ b/sass/components/_logo.scss
@@ -7,11 +7,11 @@
 }
 
 .logo-web {
-  color: #2196f3;
+  color: $main-color;
 }
 .logo-studio {
-  color: #212121;
+  color: $text-color;
 }
 .logo-studio-two {
-  color: #ffffff;
+  color: $thirdly-text-color;
 }
