--- a/sass/components/_button.scss
+++ b/sass/components/_button.scss
@@ -7,7 +7,7 @@
   margin-top: 0px;
   margin-bottom: 0px;
 
-  background-color: var(--accent-text-color);
+  background-color: #2196F3;
   color: #f5f4fa;
 
   font-weight: bold;
@@ -16,6 +16,7 @@
   letter-spacing: 0.06em;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
+
 .button:hover,
 .button:focus,
 .button:active {
@@ -50,7 +51,7 @@
 .button-two:focus,
 .button-two:active {
   background-color: var(--accent-text-color);
-  color: #ffffff;
+  color: $thirdly-text-color;
   box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
     0px 2px 2px rgba(0, 0, 0, 0.12);
 }
@@ -58,7 +59,7 @@
 
 
 .button-follow.btn{
-  background-color: #2196F3;
+  background-color: $main-color;
   border: transparent;
   border-radius: 4px;
   transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -67,7 +68,7 @@
   line-height: 1,87;
   letter-spacing: 0.06em;
 
-  color: #ffffff;
+  color: $thirdly-text-color;
 }
 .button-follow.btn:hover,
 .button-follow.btn:focus{
@@ -82,7 +83,7 @@
   margin-left: 12px;
   
 
-  background-color: #2196F3;
+  background-color: $main-color;
   border: transparent;
   border-radius: 4px;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -90,6 +91,14 @@
 .button-follow:hover,
 .button-follow:focus{
   background-color: #188ce8;
+}
+.btn{
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 30px;
+
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
 }
 
 .button-text{
@@ -100,5 +109,5 @@ font-size: 16px;
 line-height: 1,87;
 letter-spacing: 0.06em;
 
-color: #ffffff;
+color: $thirdly-text-color;
 }
