--- a/sass/components/_section-one.scss
+++ b/sass/components/_section-one.scss
@@ -35,7 +35,7 @@
 }
 
 .section-works__title {
-  color: var(--primary-text-color);
+  color: $text-color;
 
   margin-bottom: 10px;
   margin-top: 30px;
