--- a/sass/components/_section-two.scss
+++ b/sass/components/_section-two.scss
@@ -1,9 +1,8 @@
 .section-example{
   padding-top: 94px;
   padding-bottom: 94px;
-}
 
-.section-example__title{
+  &__title{
   color: $text-color;
   font-weight: bold;
   font-size: 36px;
@@ -14,7 +13,7 @@
   margin-bottom: 50px;
 }
 
-.section-example__images {
+&__images {
   display: flex;
   padding-left: 0px;
   margin-top: 0px;
@@ -22,11 +21,7 @@
   position: relative;
 }
 
-.item.section-example__images + .item.section-example__images {
-  margin-left: 30px;
-}
-
-.section-example__position{
+&__position{
   background: rgba(47, 48, 58, 0.8);
   bottom: 0;
   right: 0;
@@ -34,7 +29,7 @@
   position: absolute;
 }
 
-.section-example__position-title{
+&__position-title{
   margin: 0;
   padding-top: 27px;
   padding-bottom: 27px;
@@ -49,3 +44,10 @@
 
   color: $thirdly-text-color;
 }
+}
+
+
+.item.section-example__images + .item.section-example__images {
+  margin-left: 30px;
+}
+
