--- a/sass/components/_button.scss
+++ b/sass/components/_button.scss
@@ -15,13 +15,15 @@
   line-height: 1.9;
   letter-spacing: 0.06em;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+  &:hover,
+  &:focus,
+  &:active{
+    background-color: #188ce8;
+  }
 }
 
-.button:hover,
-.button:focus,
-.button:active {
-  background-color: #188ce8;
-}
+
 
 .button-two {
   display: flex;
@@ -43,19 +45,17 @@
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
   color 250ms cubic-bezier(0.4, 0, 0.2, 1),
   box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-.button-two {
-  color: var(--primary-text-color);
-}
-.button-two:hover,
-.button-two:focus,
-.button-two:active {
-  background-color: var(--accent-text-color);
-  color: $thirdly-text-color;
-  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
-    0px 2px 2px rgba(0, 0, 0, 0.12);
-}
+  color: #212121;
 
+  &:hover,
+  &:focus,
+  &:active{
+    background-color: $main-color;
+    color: $thirdly-text-color;
+     box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
+    0px 2px 2px rgba(0, 0, 0, 0.12);
+  }
+}
 
 
 .button-follow.btn{
@@ -69,10 +69,11 @@
   letter-spacing: 0.06em;
 
   color: $thirdly-text-color;
-}
-.button-follow.btn:hover,
-.button-follow.btn:focus{
-  background-color: #188ce8;
+
+  &:hover,
+  &:focus{
+    background-color: #188ce8;
+  }
 }
 
 .button-follow{
@@ -87,11 +88,13 @@
   border: transparent;
   border-radius: 4px;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+  &:hover,
+  &:focus{
+    background-color: #188ce8;
+  }
 }
-.button-follow:hover,
-.button-follow:focus{
-  background-color: #188ce8;
-}
+
 .btn{
   display: block;
   margin-left: auto;
