--- a/sass/components/_form.scss
+++ b/sass/components/_form.scss
@@ -84,13 +84,12 @@
   0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 4px;
   transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
 
-.modal-form{
+  &-form{
   padding: 40px;
 }
 
-.modal-hero{
+  &-hero{
   margin-top: 0;
   margin-bottom: 12px;
   font-weight: bold;
@@ -101,6 +100,7 @@
 
   color: $text-color;
 }
+}
 
 .form-field{
   position: relative;
@@ -108,22 +108,16 @@
   flex-direction: column;
   
   margin-bottom: 10px;
-}
 
-.form-field:hover .form-input{
+  &:hover .form-input,
+  &:focus .form-input{
   border: 1px solid $main-color;
-}
+  }
 
-.form-field:focus .form-input {
-  border: 1px solid $main-color;
-}
-
-.form-field:hover .svg-modal {
+  &:hover .svg-modal,
+  &:focus .svg-modal  {
   fill:$main-color;
 }
-
-.form-field:focus .svg-modal {
-  fill: $main-color;
 }
 
 .name{
@@ -145,10 +139,10 @@
   cursor: pointer;
   transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
   outline: none;
-}
 
-.form-input:focus .svg-modal {
-  fill: #188ce8;
+  &:focus .svg-modal{
+    fill: #188ce8;
+  }
 }
 
 .svg-modal{
@@ -160,6 +154,29 @@
   fill: $text-color;
 
   transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.close{
+  display: block;
+  position: absolute;
+  top: 8px;
+  right: 8px;
+
+  width: 30px;
+  height: 30px;
+
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  border-radius: 50%;
+  background-color: transparent;
+
+  &-icon{
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
+
+  &:hover .close-icon,
+  &:focus .close-icon{
+  fill:$main-color;
+}  
 }
 
 .comment{
@@ -181,10 +198,10 @@
   color: rgba(117, 117, 117, 0.5);
 
   transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
 
-.comment:hover {
+  &:hover {
   border: 1px solid $main-color;
+}
 }
 
 .checkbox-input{
@@ -200,9 +217,8 @@
   margin-top: 20px;
 
   color: $secondary-text-color;
-}
-
-.terms-link{
+  
+  &-link{
   margin-left: 5px;
   font-size: 14px;
   line-height: 2;
@@ -211,15 +227,17 @@
   text-decoration: underline;
   color: $main-color
 }
+}
 
 .checkbox-hidden{
   visibility: hidden;
-}
-.checkbox-hidden:checked + .custom-checkbox{
+
+  &:checked + .custom-checkbox{
   border: transparent;
   background-size: contain;
   box-sizing: border-box;
-  background-image: url(../images/icon\ check-2.svg);
+  background-image: url(../images/icon\check-2.svg);
+}
 }
 
 .custom-checkbox{
@@ -232,27 +250,3 @@
 }
 
 
-
-.close{
-  display: block;
-  position: absolute;
-  top: 8px;
-  right: 8px;
-
-  width: 30px;
-  height: 30px;
-
-  border: 1px solid rgba(0, 0, 0, 0.1);
-  border-radius: 50%;
-  background-color: transparent;
-}
-
-.close-icon{
-  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-.close:hover .close-icon{
-  fill:$main-color;
-}
-.close:focus .close-icon{
-  fill: $main-color;
-}
