--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -1,12 +1,12 @@
 .header {
   background-color: $thirdly-text-color;
   border-bottom: 1px solid #ececec;
-}
 
-.header-inner {
+  &-inner {
   display: flex;
   align-items: center;
   height: 80px;
+}
 }
 
 .main-nav {
@@ -20,12 +20,8 @@
   margin-top: 0px;
   margin-bottom: 0px;
   padding-left: 0px;
-}
-.item + .item {
-  margin-left: 50px;
-}
 
-.site-nav .link {
+  & .link {
   position: relative;
   display: block;
   padding-top: 32px;
@@ -38,16 +34,27 @@
   letter-spacing: 0.02em;
 
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-.site-nav .link:hover,
-.site-nav .link:focus {
-  color: $main-color;
-}
-.site-nav .link.current {
+
+  &:hover,
+  &:focus {
   color: $main-color;
 }
 
-.cont-nav .link {
+&.current {
+  color: $main-color;
+}
+}
+}
+
+.item + .item {
+  margin-left: 50px;
+}
+
+.cont-nav {
+  display: flex;
+  align-items: center;
+
+  & .link {
   display: flex;
   align-items: center;
   padding-top: 34px;
@@ -60,56 +67,57 @@
   letter-spacing: 0.02em;
 
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-.cont-nav .link:hover,
-.cont-nav .link:focus {
+
+  &:hover,
+  &:focus {
   color: $main-color;
   font-weight: 500;
   font-size: 14px;
   line-height: 1.14;
   letter-spacing: 0.02em;
 }
-.cont-nav.item + .item {
+}
+
+&.item + .item {
   margin-left: 50px;
 }
-.cont-nav {
-  display: flex;
-  align-items: center;
-}
-.cont-nav.list {
+
+&.list {
   align-items: center;
   margin-left: auto;
   padding-left: 0px;
   margin-top: 0px;
   margin-bottom: 0px;
 }
+} 
 
 .item-icon {
   margin-right: 10px;
-}
-.item-icon.envelope{
+
+  &.envelope{
   fill: currentColor;
+
+  &:hover,
+  &:focus{
+  fill: $main-color;
 }
+}
+
+&.tel{
+  fill: currentColor;
+
+  &:hover,
+  &:focus{
+  fill: $main-color;
+}
+}
+}
+
 .envelope {
   width: 16px;
   height: 12px;
 }
-.item-icon.envelope:hover{
-  fill: $main-color;
-}
-.item-icon.envelope:focus{
-  fill: $main-color;
-}
 
-.item-icon.tel{
-  fill: currentColor;
-}
-.item-icon.tel:hover{
-  fill: $main-color;
-}
-.item-icon.tel:focus{
-  fill: $main-color;
-}
 .tel {
   width: 10px;
   height: 16px;
