--- a/sass/components/_section-four.scss
+++ b/sass/components/_section-four.scss
@@ -24,14 +24,20 @@
   display: flex;
   margin: 0;
   padding: 0;
-}
 
-.clients-image {
+  &-image {
   display: flex;
+
+  & + &{
+  margin-left: 30px;
+}
 }
 
-.clients-image+.clients-image{
-  margin-left: 30px;
+&-logo {
+  display: block;
+  fill: #afb1b8;
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
 }
 
 .clients-link {
@@ -43,20 +49,17 @@
   justify-content: center;
   align-items: center;
   transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-.clients-link:hover,
-.clients-link:focus {
+
+  &:hover,
+  &:focus {
   border: 1px solid $main-color;
 }
 
-.clients-logo {
-  display: block;
-  fill: #afb1b8;
-  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-.clients-link:hover .clients-logo{
+&:hover .clients-logo,
+&:focus .clients-logo{
   fill: $main-color;
 }
-.clients-link:focus .clients-logo{
-  fill: $main-color;
 }
+
+
+
