--- a/sass/components/_section-one.scss
+++ b/sass/components/_section-one.scss
@@ -1,8 +1,7 @@
 .section-works {
   padding-top: 94px;
-}
 
-.section-works__block {
+  &__block {
   display: flex;
   padding-left: 0px;
   padding-top: 0px;
@@ -10,14 +9,16 @@
   margin-bottom: 0px;
 }
 
-.section-works__li {
+&__li {
   margin-right: 30px;
-}
-.section-works__li:nth-child(4n) {
+
+  &:nth-child(4n) {
   margin-right: 0px;
 }
+}
 
-.section-works__background-context {
+
+&__background-context {
   display: flex;
   margin-bottom: 30px;
   width: 270px;
@@ -28,13 +29,13 @@
   align-items: center;
 }
 
-.section-works__background-image {
+&__background-image {
   display: flex;
   width: 70px;
   height: 70px;
 }
 
-.section-works__title {
+&__title {
   color: $text-color;
 
   margin-bottom: 10px;
@@ -46,7 +47,7 @@
   text-transform: uppercase;
 }
 
-.section-works__p {
+&__p {
   font-weight: normal;
   font-size: 14px;
   line-height: 1.7;
@@ -59,3 +60,5 @@
 .p:nth-last-child(3n) {
   margin-right: 0px;
 }
+}
+
