--- a/sass/components/_section-three.scss
+++ b/sass/components/_section-three.scss
@@ -3,9 +3,8 @@
   padding-bottom: 94px;
   margin-top: 0px;
   padding-top: 94px;
-}
 
-.section-members__title{
+  &__title{
   color: $text-color;
   font-weight: bold;
   font-size: 36px;
@@ -17,26 +16,26 @@
   margin-bottom: 50px;
 }
 
-.section-members__distance {
+&__distance {
   display: inline-flex;
   padding-left: 0px;
   margin-top: 0px;
   margin-bottom: 0px;
 }
 
-.section-members__li {
+&__li {
   background-color: $thirdly-text-color;
   border-radius: 0px 0px 4px 4px;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
   width: 270px;
-}
 
-.section-members__li + .section-members__li {
+  & + & {
   margin-left: 30px;
 }
+}
 
-.section-members__title-two {
+&__title-two {
   color: $text-color;
   font-weight: 500;
   font-size: 16px;
@@ -47,7 +46,7 @@
   margin-top: 0px;
 }
 
-.section-members__paragraph {
+&__paragraph {
   color: $secondary-text-color;
   font-family: Roboto;
   font-weight: 400;
@@ -60,33 +59,36 @@
   margin-bottom: 16px;
 }
 
-.section-members__images {
+&__images {
   display: block;
   margin-left: 0px;
   margin-right: 30px;
   margin-bottom: 0px;
-}
-.section-members__images :nth-child(4n){
+ 
+  & :nth-child(4n){
   margin-right: 0px;
 }
+}
 
-
-.section-members__div {
+&__div {
   padding-top: 30px;
   padding-bottom: 30px;
 }
 
-.section-members__images {
+&__images {
   display: block;
   margin-left: 0px;
   margin-right: 30px;
   margin-bottom: 0px;
-}
-.section-members__images:nth-last-child(4){
+
+  &:nth-last-child(4){
   margin-right: 0px;
 }
+}
 
-.section-members__div {
+&__div {
   padding-top: 30px;
   padding-bottom: 30px;
 }
+}
+
