--- a/sass/components/_social-links.scss
+++ b/sass/components/_social-links.scss
@@ -3,9 +3,8 @@
   padding: 0;
   margin: 0;
   justify-content: center;
-}
 
-.social-links .link {
+  & .link {
   display: flex;
   align-items: center;
   width: 44px;
@@ -13,8 +12,8 @@
   border-radius: 50%;
   background-repeat: no-repeat;
   background-position: center;
-}
-.social-links .link.footer-bgc{
+
+  &.footer-bgc{
    display: flex;
    align-items: center;
    width: 44px;
@@ -24,6 +23,19 @@
    background-position: center;
    background-color: rgba(255, 255, 255, 0.1);
 }
+  &:hover{
+  background-color: $main-color;
+  } 
+}
+
+& > li {
+  margin-right: 10px;
+}
+& > li:last-child {
+  margin-right: 0px;
+}
+}
+
 
 .link.icon-images{
   display: flex;
@@ -34,6 +46,10 @@
 .link-icon{
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
   fill: #AFB1B8;
+
+  &-footer{
+  fill: $thirdly-text-color;
+}
 }
 
 .link.footer-bgc{
@@ -42,22 +58,8 @@
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.link-icon-footer{
-  fill: $thirdly-text-color;
-}
-
 .link:hover .link-icon{
   fill: $thirdly-text-color;
-}
-.social-links .link:hover{
-  background-color: $main-color;
-}
-
-.social-links > li {
-  margin-right: 10px;
-}
-.social-links > li:last-child {
-  margin-right: 0px;
 }
 
 .footer-links{
