--- a/css/main.css
+++ b/css/main.css
@@ -25,18 +25,6 @@ textarea {
   max-width: 1200px;
 }
 
-.link.item-current::after {
-  position: absolute;
-  bottom: 0;
-  left: 0;
-  content: "";
-  display: block;
-  width: 100%;
-  height: 4px;
-  background-color: #2196F3;
-  border-radius: 2px;
-}
-
 .logo {
   font-family: Raleway, sans-serif;
   font-weight: bold;
@@ -152,7 +140,7 @@ textarea {
   letter-spacing: 0.02em;
 }
 
-.cont-nav.item + .item {
+.item + .item {
   margin-left: 50px;
 }
 
@@ -178,6 +166,11 @@ textarea {
   fill: #2196F3;
 }
 
+.envelope {
+  width: 16px;
+  height: 12px;
+}
+
 .item-icon.tel {
   fill: currentColor;
 }
@@ -186,14 +179,21 @@ textarea {
   fill: #2196F3;
 }
 
-.envelope {
-  width: 16px;
-  height: 12px;
-}
-
 .tel {
   width: 10px;
   height: 16px;
+}
+
+.link.item-current::after {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  content: "";
+  display: block;
+  width: 100%;
+  height: 4px;
+  background-color: #2196F3;
+  border-radius: 2px;
 }
 
 .button {
@@ -467,14 +467,14 @@ textarea {
   background-color: transparent;
 }
 
-.close-icon {
-  -webkit-transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
 .close:hover .close-icon,
 .close:focus .close-icon {
   fill: #2196F3;
+}
+
+.close-icon {
+  -webkit-transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .comment {
@@ -535,7 +535,7 @@ textarea {
   background-size: contain;
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
-  background-image: url(../images/icon\ check-2.svg);
+  background-image: url(../images/check-2.svg);
 }
 
 .custom-checkbox {
@@ -578,6 +578,14 @@ textarea {
   padding-top: 94px;
 }
 
+.section-works__li {
+  margin-right: 30px;
+}
+
+.section-works__li:nth-child(4n) {
+  margin-right: 0px;
+}
+
 .section-works__block {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -586,14 +594,6 @@ textarea {
   padding-top: 0px;
   margin-top: 0px;
   margin-bottom: 0px;
-}
-
-.section-works__li {
-  margin-right: 30px;
-}
-
-.section-works__li:nth-child(4n) {
-  margin-right: 0px;
 }
 
 .section-works__background-context {
@@ -642,7 +642,7 @@ textarea {
   margin-bottom: 0px;
 }
 
-.section-works .p:nth-last-child(3n) {
+.section-works__p:nth-last-child(3n) {
   margin-right: 0px;
 }
 
@@ -973,7 +973,6 @@ textarea {
 }
 
 .add {
-  font-family: Roboto;
   font-style: normal;
   font-weight: normal;
   font-size: 14px;
@@ -1064,8 +1063,7 @@ textarea {
   transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1), -webkit-box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.cards-shadow:hover,
-.cards-shadow:focus {
+.cards-shadow:hover, .cards-shadow:focus {
   -webkit-box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
           box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
 }
