--- a/sass/components/_hero.scss
+++ b/sass/components/_hero.scss
@@ -11,8 +11,9 @@
  background-position: center;
  background-repeat: no-repeat;
  background-size: cover;
+}
 
- &-title {
+.hero-title {
   color: $thirdly-text-color;
   font-weight: 900;
   font-size: 44px;
@@ -23,7 +24,6 @@
 
   margin-top: 0px;
   margin-bottom: 30px;
-}
 }
 
 
