--- a/sass/components/_portfolio.scss
+++ b/sass/components/_portfolio.scss
@@ -33,19 +33,21 @@
 .cards-shadow{
   display: block;
   transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-.cards-shadow:hover,
-.cards-shadow:focus {
+
+  &:hover,
+  &:focus {
   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12),
   0px 4px 4px rgba(0, 0, 0, 0.06),
-  1px 4px 6px rgba(0, 0, 0, 0.16);
-  
-  
+  1px 4px 6px rgba(0, 0, 0, 0.16);  
 }
-.cards-shadow:hover .discription , 
-.cards-shadow:focus .discription{
+
+&:hover .discription, 
+&:focus .discription {
   transform: translateY(0);
 }
+}
+
+
 
 .discription-position {
   position: relative;
