--- a/sass/components/_section-four.scss
+++ b/sass/components/_section-four.scss
@@ -24,22 +24,22 @@
   display: flex;
   margin: 0;
   padding: 0;
+}
 
-  &-image {
+.clients-image {
   display: flex;
+}
 
-  & + &{
+  .clients-image + .clients-image{
   margin-left: 30px;
 }
-}
 
-&-logo {
+.clients-logo {
   display: block;
   fill: #afb1b8;
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-}
-
+  
 .clients-link {
   display: flex;
   width: 170px;
@@ -55,8 +55,8 @@
   border: 1px solid $main-color;
 }
 
-&:hover .clients-logo,
-&:focus .clients-logo{
+  &:hover .clients-logo,
+  &:focus .clients-logo{
   fill: $main-color;
 }
 }
