--- a/sass/components/_section-three.scss
+++ b/sass/components/_section-three.scss
@@ -3,8 +3,9 @@
   padding-bottom: 94px;
   margin-top: 0px;
   padding-top: 94px;
+}
 
-  &__title{
+.section-members__title{
   color: $text-color;
   font-weight: bold;
   font-size: 36px;
@@ -16,14 +17,14 @@
   margin-bottom: 50px;
 }
 
-&__distance {
+.section-members__distance {
   display: inline-flex;
   padding-left: 0px;
   margin-top: 0px;
   margin-bottom: 0px;
 }
 
-&__li {
+.section-members__li {
   background-color: $thirdly-text-color;
   border-radius: 0px 0px 4px 4px;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
@@ -35,7 +36,7 @@
 }
 }
 
-&__title-two {
+.section-members__title-two {
   color: $text-color;
   font-weight: 500;
   font-size: 16px;
@@ -46,7 +47,7 @@
   margin-top: 0px;
 }
 
-&__paragraph {
+.section-members__paragraph {
   color: $secondary-text-color;
   font-family: Roboto;
   font-weight: 400;
@@ -59,7 +60,7 @@
   margin-bottom: 16px;
 }
 
-&__images {
+.section-members__images {
   display: block;
   margin-left: 0px;
   margin-right: 30px;
@@ -70,12 +71,12 @@
 }
 }
 
-&__div {
+.section-members__div {
   padding-top: 30px;
   padding-bottom: 30px;
 }
 
-&__images {
+.section-members__images {
   display: block;
   margin-left: 0px;
   margin-right: 30px;
@@ -86,9 +87,8 @@
 }
 }
 
-&__div {
+.section-members__div {
   padding-top: 30px;
   padding-bottom: 30px;
-}
 }
 
