--- a/sass/components/_social-links.scss
+++ b/sass/components/_social-links.scss
@@ -46,10 +46,10 @@
 .link-icon{
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
   fill: #AFB1B8;
-
-  &-footer{
-  fill: $thirdly-text-color;
 }
+
+.link-icon-footer{
+  fill: $thirdly-text-color;
 }
 
 .link.footer-bgc{
